# qiskit-playground

./: .envrc  .pre-commit-config.yaml  README.md  devenv.nix  environment.yml  flake.nix  matplotlibrc  pyproject.toml
finance/: PortfolioOptimization.ipynb  README.md
