[project]
name = "qiskit-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipympl>=0.9.5",
    "jupyterlab>=4.3.4",
    "qiskit-finance>=0.4.1",
    "qiskit[visualization]>=1.3.1",
    "ruff>=0.8.3",
    "seaborn>=0.13.2",
]
