[project]
name = "qiskit-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipympl>=0.9.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "qiskit-aer>=0.15.1",
    "qiskit-finance>=0.4.1",
    "qiskit[visualization]>=1.3.1",
    "rapidfuzz>=3.11.0",
    "ruff>=0.8.3",
    "seaborn>=0.13.2",
]
